<resources>
    <string name="app_name">PaypalRedesign</string>
    <string name="enter_your_name_or_e_mail">Enter Your name or e-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="having_trouble_logging_in">Having trouble logging in?</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_vadim">Hello,Vadim!</string>
    <string name="_272_30">$ 272.30</string>
    <string name="request_payment">Request \nPayment</string>
    <string name="send_n_money">Send \n money</string>
    <string name="your_balance">Your Balance</string>
    <string name="activity">Activity</string>
    <string name="view_all">View all</string>
    <string name="_2_hours_ago">2 hours ago</string>
    <string name="_250">+$250</string>
    <string name="your_wallet">Your wallet</string>
    <string name="personal_info">Personal info</string>
    <string name="name">Name</string>
    <string name="vadim_demenko">Vadim Demenko</string>
    <string name="e_mail">E-mail</string>
    <string name="vadikforz_gmail_com">vadikforz@gmail.com</string>
    <string name="phone">Phone</string>
    <string name="_4_1782_049_294">+4 1782 049 294</string>
    <string name="my_banking_cards">My banking cards</string>
    <string name="add">Add</string>
</resources>