<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/paypal_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etNameOrMail"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/manrope_medium"
            android:gravity="center"
            android:hint="@string/enter_your_name_or_e_mail"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/manrope_medium"
            android:gravity="center"
            android:hint="@string/password"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/etNameOrMail" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_blue_design"
            android:elevation="10dp"
            android:fontFamily="@font/manrope_semibold"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />


        <TextView
            android:id="@+id/tvHavingTroubleLoggingIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:fontFamily="@font/manrope_medium"
            android:paddingVertical="10dp"
            android:text="@string/having_trouble_logging_in"
            android:textColor="#243656"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogIn" />

        <FrameLayout
            android:id="@+id/line"
            android:layout_width="65dp"
            android:layout_height="2dp"
            android:layout_marginTop="29dp"
            android:background="#F5F7FA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHavingTroubleLoggingIn" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/sign_up"
            android:textColor="#243656"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>









