<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/btn_white_design">

    <ImageView
        android:id="@+id/ivActivity"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="15dp"
        tools:src="@drawable/item_place_holder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/manrope_medium"
        tools:text="@string/activity"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/ivActivity"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvActivityTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:alpha="0.5"
        android:fontFamily="@font/manrope_medium"
        tools:text="@string/_2_hours_ago"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivActivity"
        app:layout_constraintTop_toBottomOf="@id/tvActivityTitle" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/manrope_semibold"
        tools:text="@string/_250"
        android:textColor="#37D39B"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>