<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    android:fillViewport="true"
    tools:context=".ui.fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/home_header"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="32dp"
                android:src="@drawable/logo_home"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/welcomeMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:alpha="0.5"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/hello_vadim"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@id/logo"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <TextView
                android:id="@+id/tvAccountBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/_272_30"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="@id/logo"
                app:layout_constraintTop_toBottomOf="@id/welcomeMessage" />

            <TextView
                android:id="@+id/tvBalanceHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="28dp"
                android:fontFamily="@font/manrope_medium"
                android:text="@string/your_balance"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/logo"
                app:layout_constraintTop_toBottomOf="@id/tvAccountBalance" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/userProfile"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_margin="32dp"
                android:src="@drawable/user_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/profileRounded"
                app:strokeColor="#0070BA"
                app:strokeWidth="2dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layoutSendMoney"
            android:layout_width="107dp"
            android:layout_height="120dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_blue_design"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerLayout">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/send"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="21dp"
                android:textSize="12sp"
                android:layout_marginBottom="17dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/send_n_money"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutRequestPayment"
            android:layout_width="107dp"
            android:layout_height="120dp"

            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_white_design"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/layoutSendMoney"
            app:layout_constraintTop_toBottomOf="@id/headerLayout">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/request"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="17dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/request_payment"
                android:textColor="#005EA6"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutMore"
            android:layout_width="66dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_white_design"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/layoutRequestPayment"
            app:layout_constraintTop_toBottomOf="@id/headerLayout">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/more"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvActivityHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/activity"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/layoutSendMoney"
            app:layout_constraintStart_toStartOf="@id/layoutSendMoney"/>

        <TextView
            android:id="@+id/tvViewAllActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/manrope_medium"
            android:text="@string/view_all"
            android:textColor="@color/black"
            android:alpha="0.5"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/layoutSendMoney"
            app:layout_constraintEnd_toEndOf="@id/layoutMore"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="5"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="15dp"
            tools:listitem="@layout/item_activity"
            app:layout_constraintTop_toBottomOf="@id/tvActivityHeader"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>